--- a/diamond.html
+++ b/diamond.html
@@ -93,7 +93,7 @@
 
             <div class="product">
                 <div class="image-container">
-                    <!-- <div class="badge"><img src="" alt=""> EXPERT'S CHOICE</div> -->
+                    <!-- <div class="badge"><span class="star"><img src="./assets/ribbon-star.svg"></span> EXPERT'S CHOICE</div> -->
                     <div class="image-wrapper">
                         <img src="https://www.tanishq.co.in/dw/image/v2/BKCK_PRD/on/demandware.static/-/Sites-Tanishq-product-catalog/default/dwb58ab686/images/hi-res/502998SCHAAA09_1.jpg?sw=640&sh=640" 
                              alt="Earrings" class="default-image">
@@ -216,7 +216,7 @@
 
             <div class="product">
                 <div class="image-container">
-                    <!-- <div class="badge"><img src="" alt=""> EXPERT'S CHOICE</div> -->
+                    <!-- <div class="badge"><span class="star"><img src="./assets/ribbon-star.svg"></span> EXPERT'S CHOICE</div> -->
                     <div class="image-wrapper">
                         <img src="https://www.tanishq.co.in/dw/image/v2/BKCK_PRD/on/demandware.static/-/Sites-Tanishq-product-catalog/default/dw0253a212/images/hi-res/502990OADAAA02_1.jpg?sw=640&sh=640" 
                              alt="Earrings" class="default-image">
@@ -302,7 +302,7 @@
 
             <div class="product">
                 <div class="image-container">
-                    <div class="badge"><img src="" alt="">BESTSELLERS</div>
+                    <div class="badge"><span class="star"><img src="./assets/ribbon-star.svg"></span> BESTSELLERS</div>
                     <div class="image-wrapper">
                         <img src="https://www.tanishq.co.in/dw/image/v2/BKCK_PRD/on/demandware.static/-/Sites-Tanishq-product-catalog/default/dw99b87ca0/images/hi-res/502990OABAAA02_1.jpg?sw=640&sh=640" 
                              alt="Earrings" class="default-image">
@@ -388,7 +388,7 @@
 
             <div class="product">
                 <div class="image-container">
-                    <div class="badge"><img src="" alt=""> EXPERT'S CHOICE</div>
+                    <div class="badge"><span class="star"><img src="./assets/ribbon-star.svg"></span> EXPERT'S CHOICE</div>
                     <div class="image-wrapper">
                         <img src="https://www.tanishq.co.in/dw/image/v2/BKCK_PRD/on/demandware.static/-/Sites-Tanishq-product-catalog/default/dw85c3d6ef/images/hi-res/500063OBAABA09_1.jpg?sw=640&sh=640" 
                              alt="Earrings" class="default-image">
@@ -509,7 +509,7 @@
 
             <div class="product">
                 <div class="image-container">
-                    <div class="badge"><img src="" alt=""> EXPERT'S CHOICE</div>
+                    <div class="badge"><span class="star"><img src="./assets/ribbon-star.svg"></span> EXPERT'S CHOICE</div>
                     <div class="image-wrapper">
                         <img src="https://www.tanishq.co.in/dw/image/v2/BKCK_PRD/on/demandware.static/-/Sites-Tanishq-product-catalog/default/dwcda98055/images/hi-res/502999YCNAA32_1.jpg?sw=640&sh=640" 
                              alt="Earrings" class="default-image">
@@ -567,7 +567,7 @@
             
             <div class="product">
                 <div class="image-container">
-                    <div class="badge"><img src="" alt=""> EXPERT'S CHOICE</div>
+                    <div class="badge"><span class="star"><img src="./assets/ribbon-star.svg"></span> EXPERT'S CHOICE</div>
                     <div class="image-wrapper">
                         <img src="https://www.tanishq.co.in/dw/image/v2/BKCK_PRD/on/demandware.static/-/Sites-Tanishq-product-catalog/default/dw958d14ac/images/hi-res/50D4I2FRBAA02_1.jpg?sw=640&sh=640" 
                              alt="Earrings" class="default-image">
@@ -595,7 +595,7 @@
             </div>
             <div class="product">
                 <div class="image-container">
-                    <!-- <div class="badge"><img src="" alt=""> EXPERT'S CHOICE</div> -->
+                    <!-- <div class="badge"><span class="star"><img src="./assets/ribbon-star.svg"></span> EXPERT'S CHOICE</div> -->
                     <div class="image-wrapper">
                         <img src="https://www.tanishq.co.in/dw/image/v2/BKCK_PRD/on/demandware.static/-/Sites-Tanishq-product-catalog/default/dw7cc26342/images/hi-res/50E4I2FCCAA02_1.jpg?sw=640&sh=640" 
                              alt="Earrings" class="default-image">
